fix: align form--consent

--- a/styles.scss
+++ b/styles.scss
@@ -420,11 +420,17 @@ button {
         }
 
         .form--consent {
-            display: inline-block;
+            display: inline-flex;
+            gap: 0.6rem
+        }
+
+        #checkbox {
+            align-self: flex-start;
+            border-radius: 0.25rem;
+            border: 1px solid #95989A;
         }
 
         .form--consent-text {
-            display: inline-block;
             color: #707070;
             font-family: "Open Sans";
             font-size: 0.75rem;
